--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -31,10 +31,10 @@ can not "hear" one another directly.
 
 ## How To Mine MOBILE
 
-Several factors contribute to the amount of MOBILE a 5G Hotspot will earn over a given period. This
-page covers some higher-level concepts, design elements, and rules to keep in mind that will help
-better explain what you might earn and why. This section covers these and some mining and token
-reward basics.
+Several factors contribute to the amount of MOBILE a 5G Hotspot may earn over a given period. This
+page covers some higher-level concepts, design elements, and rules to keep in mind that help better
+explain what you might earn and why. This section covers these and some mining and token reward
+basics.
 
 The Helium Blockchain rewards 5G Hotspots with CBRS Radios for providing 5G wireless coverage and
 verifying the Helium Network with the Helium MOBILE Token.
@@ -48,8 +48,8 @@ rewards. Once properly deployed, you, as the owner, are not required to do anyth
 More than one Small Cell Radio can be connected to a single 5G Hotspot to create a larger 5G
 coverage area. 5G Hotspots can support as many Small Cell Radios as would saturate their bandwidth.
 
-Connecting more than one Small Cell Radio will require an additional networking switch. Refer to the
-5G Hotspot Maker installation guides for specific instructions.
+Connecting more than one Small Cell Radio requires an additional networking switch. Refer to the 5G
+Hotspot Maker installation guides for specific instructions.
 
 :::info
 
@@ -94,8 +94,8 @@ brief interruptions.
 
 ## Small Cell Radio Reward Scaling
 
-All 5G Hotspots with properly installed and registered CBRS Radios will earn rewards for
-participating on the Network. A rewards unit multiple is applied to the various Small Cell Radio
+All 5G Hotspots with properly installed and registered CBRS Radios will be eligible to earn rewards
+for participating on the Network. A rewards unit multiple is applied to the various Small Cell Radio
 models based on whether they are indoor or outdoor, as well as their power output, as follows:
 
 | Small Cell Radio Type | Reward Weight |
@@ -174,13 +174,13 @@ High-Power Outdoor Poordegraded       => 100,000,000 * 0.001 /   10 = 14,285.71 
 
 ## Speed Tests and Quality of Service
 
-A 5G Hotspot will automatically perform a Speed Test, with the results averaged by the MOBILE PoC
-Oracle. The MOBILE PoC Oracle will include these Speed Test metrics in the Rewards calculations for
-each 5G Hotspot.
+A 5G Hotspot automatically performs a Speed Test, with the results averaged by the MOBILE PoC
+Oracle. The MOBILE PoC Oracle includes these Speed Test metrics in the Rewards calculations for each
+5G Hotspot.
 
 The 5G Hotspot will randomly measure download, upload, and latency to the MOBILE verifier twice in a
-given 24-hour period. If a test can not complete successfully, the 5G Hotspot will automatically
-retry every 30 minutes until a Speed Test is successful.
+given 24-hour period. If a test can not complete successfully, the 5G Hotspot automatically retries
+every 30 minutes until a Speed Test is successful.
 
 The first Speed Test for a newly installed 5G Hotspot is performed within the first 12 hours after
 powering it on.
@@ -611,7 +611,7 @@ Mobile Mappers are hardware devices explicitly designed to attach to CBRS Small 
 verify coverage quality and location in a particular hex.
 
 Following [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), Mobile Mappers will
-earn 10% of Mobile rewards for verifying the Network.
+be eligible to earn 10% of Mobile rewards for verifying the Network.
 
 The transition from "heartbeat" rewards, as in [Genesis](/5g-on-helium/mobile-poc#mobile-genesis),
 to Mapping rewards will not happen immediately. Instead, a transitional period will allow 5G Hotspot
