typo correction in example table

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -159,15 +159,15 @@ Each Small Cell Radio is allocated its rewards based on the reward weight of the
 > Small Cell Reward = Daily Rewards \* Reward Weight / Count of Small Cell Type
 
 ```bash
-High-Power Outdoor Acceptabledegraded => 100,000,000 * 0.143 /  250 = 57,142.86 MOBILE per day
-High-Power Outdoor Degraded           => 100,000,000 * 0.014 /   50 = 28,571.43 MOBILE per day
-High-Power Outdoor Poordegraded       => 100,000,000 * 0.001 /   10 = 14,285.71 MOBILE per day
-           Outdoor Acceptabledegraded => 100,000,000 * 0.393 / 1100 = 35,714.29 MOBILE per day
-           Outdoor Degraded           => 100,000,000 * 0.089 /  500 = 17,857.14 MOBILE per day
-           Outdoor Poordegraded       => 100,000,000 * 0.036 /  400 =  8,928.57 MOBILE per day
-            Indoor Acceptabledegraded => 100,000,000 * 0.214 / 1500 = 14,285.71 MOBILE per day
-            Indoor Degraded           => 100,000,000 * 0.086 / 1200 =  7,142.86 MOBILE per day
-            Indoor Poordegraded       => 100,000,000 * 0.024 /  660 =  3,571.43 MOBILE per day
+High-Power Outdoor Acceptable => 100,000,000 * 0.143 /  250 = 57,142.86 MOBILE per day
+High-Power Outdoor Degraded   => 100,000,000 * 0.014 /   50 = 28,571.43 MOBILE per day
+High-Power Outdoor Poor       => 100,000,000 * 0.001 /   10 = 14,285.71 MOBILE per day
+           Outdoor Acceptable => 100,000,000 * 0.393 / 1100 = 35,714.29 MOBILE per day
+           Outdoor Degraded   => 100,000,000 * 0.089 /  500 = 17,857.14 MOBILE per day
+           Outdoor Poor       => 100,000,000 * 0.036 /  400 =  8,928.57 MOBILE per day
+            Indoor Acceptable => 100,000,000 * 0.214 / 1500 = 14,285.71 MOBILE per day
+            Indoor Degraded   => 100,000,000 * 0.086 / 1200 =  7,142.86 MOBILE per day
+            Indoor Poor       => 100,000,000 * 0.024 /  660 =  3,571.43 MOBILE per day
 ```
 
 ---
