--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -31,10 +31,10 @@ can not "hear" one another directly.
 
 ## How To Mine MOBILE
 
-Several factors contribute to the amount of MOBILE a 5G Hotspot will earn over a given period. This
-page covers some higher-level concepts, design elements, and rules to keep in mind that will help
-better explain what you might earn and why. This section covers these and some mining and token
-reward basics.
+Several factors contribute to the amount of MOBILE a 5G Hotspot may earn over a given period. This
+page covers some higher-level concepts, design elements, and rules to keep in mind that help better
+explain what you might earn and why. This section covers these and some mining and token reward
+basics.
 
 The Helium Blockchain rewards 5G Hotspots with CBRS Radios for providing 5G wireless coverage and
 verifying the Helium Network with the Helium MOBILE Token.
@@ -48,8 +48,8 @@ rewards. Once properly deployed, you, as the owner, are not required to do anyth
 More than one Small Cell Radio can be connected to a single 5G Hotspot to create a larger 5G
 coverage area. 5G Hotspots can support as many Small Cell Radios as would saturate their bandwidth.
 
-Connecting more than one Small Cell Radio will require an additional networking switch. Refer to the
-5G Hotspot Maker installation guides for specific instructions.
+Connecting more than one Small Cell Radio requires an additional networking switch. Refer to the 5G
+Hotspot Maker installation guides for specific instructions.
 
 :::info
 
@@ -94,8 +94,8 @@ brief interruptions.
 
 ## Small Cell Radio Reward Scaling
 
-All 5G Hotspots with properly installed and registered CBRS Radios will earn rewards for
-participating on the Network. A rewards unit multiple is applied to the various Small Cell Radio
+All 5G Hotspots with properly installed and registered CBRS Radios will be eligible to earn rewards
+for participating on the Network. A rewards unit multiple is applied to the various Small Cell Radio
 models based on whether they are indoor or outdoor, as well as their power output, as follows:
 
 | Small Cell Radio Type | Reward Weight |
@@ -136,14 +136,20 @@ following (the below numbers are examples and may not reflect actual deployed 5G
 Calculate the Total Reward Points for a given epoch using the Reward Weight for each Small Cell
 Radio type.
 
-In this example, the total rewards Points per epoch is 4,000, and the ratios are as follows:
+In this example, the total rewards Points per epoch is 7,000, and the ratios are as follows:
 
 ```bash
-  High-Power Outdoor Count (  150) * 4.0    =>      600   =>  0.15
-+            Outdoor Count (  800) * 2.5    =>  + 2,000   =>  0.50
-+             Indoor Count (1,400) * 1.0    =>  + 1,400   =>  0.35
------------------------------------------       --------
-                                                  4,000
+  High-Power Outdoor Count Acceptable ( 250) * 4.0 * 1.00   =>     1000   =>  0.143
++ High-Power Outdoor Count Degraded   (  50) * 4.0 * 0.50   =>  +   100   =>  0.014
++ High-Power Outdoor Count Poor       (  10) * 4.0 * 0.25   =>  +    10   =>  0.001
++            Outdoor Count Acceptable (1100) * 2.5 * 1.00   =>  +  2750   =>  0.393
++            Outdoor Count Degraded   ( 500) * 2.5 * 0.50   =>  +   625   =>  0.089
++            Outdoor Count Poor       ( 400) * 2.5 * 0.25   =>  +   250   =>  0.036
++             Indoor Count Acceptable (1500) * 1.0 * 1.00   =>  +  1500   =>  0.214
++             Indoor Count Degraded   (1200) * 1.0 * 0.50   =>  +   600   =>  0.086
++             Indoor Count Poor       ( 660) * 1.0 * 0.25   =>  +   165   =>  0.024
+---------------------------------------------------------       --------
+                                                                  7,000
 ```
 
 ### Earnings per Small Cell Radio
@@ -153,22 +159,28 @@ Each Small Cell Radio is allocated its rewards based on the reward weight of the
 > Small Cell Reward = Daily Rewards \* Reward Weight / Count of Small Cell Type
 
 ```bash
-High-Power Outdoor  => 100,000,000 * 0.15 /   150 = 100,000 MOBILE per day
-           Outdoor  => 100,000,000 * 0.50 /   800 =  62,500 MOBILE per day
-            Indoor  => 100,000,000 * 0.35 / 1,400 =  25,000 MOBILE per day
+High-Power Outdoor Acceptable => 100,000,000 * 0.143 /  250 = 57,142.86 MOBILE per day
+High-Power Outdoor Degraded   => 100,000,000 * 0.014 /   50 = 28,571.43 MOBILE per day
+High-Power Outdoor Poor       => 100,000,000 * 0.001 /   10 = 14,285.71 MOBILE per day
+           Outdoor Acceptable => 100,000,000 * 0.393 / 1100 = 35,714.29 MOBILE per day
+           Outdoor Degraded   => 100,000,000 * 0.089 /  500 = 17,857.14 MOBILE per day
+           Outdoor Poor       => 100,000,000 * 0.036 /  400 =  8,928.57 MOBILE per day
+            Indoor Acceptable => 100,000,000 * 0.214 / 1500 = 14,285.71 MOBILE per day
+            Indoor Degraded   => 100,000,000 * 0.086 / 1200 =  7,142.86 MOBILE per day
+            Indoor Poor       => 100,000,000 * 0.024 /  660 =  3,571.43 MOBILE per day
 ```
 
 ---
 
 ## Speed Tests and Quality of Service
 
-A 5G Hotspot will automatically perform a Speed Test, with the results averaged by the MOBILE PoC
-Oracle. The MOBILE PoC Oracle will include these Speed Test metrics in the Rewards calculations for
-each 5G Hotspot.
+A 5G Hotspot automatically performs a Speed Test, with the results averaged by the MOBILE PoC
+Oracle. The MOBILE PoC Oracle includes these Speed Test metrics in the Rewards calculations for each
+5G Hotspot.
 
 The 5G Hotspot will randomly measure download, upload, and latency to the MOBILE verifier twice in a
-given 24-hour period. If a test can not complete successfully, the 5G Hotspot will automatically
-retry every 30 minutes until a Speed Test is successful.
+given 24-hour period. If a test can not complete successfully, the 5G Hotspot automatically retries
+every 30 minutes until a Speed Test is successful.
 
 The first Speed Test for a newly installed 5G Hotspot is performed within the first 12 hours after
 powering it on.
@@ -599,7 +611,7 @@ Mobile Mappers are hardware devices explicitly designed to attach to CBRS Small 
 verify coverage quality and location in a particular hex.
 
 Following [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md), Mobile Mappers will
-earn 10% of Mobile rewards for verifying the Network.
+be eligible to earn 10% of Mobile rewards for verifying the Network.
 
 The transition from "heartbeat" rewards, as in [Genesis](/5g-on-helium/mobile-poc#mobile-genesis),
 to Mapping rewards will not happen immediately. Instead, a transitional period will allow 5G Hotspot
