--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -76,8 +76,13 @@ To qualify for Genesis Rewards in a given Reward Period, a CBRS Small Cell Radio
 
 - Be connected to a 5G Hotspot.
 - Be installed appropriately.
-  - Be registered with the SAS (Outdoor Radios Only).
-- Broadcast at least 1 "heartbeat" per Reward Period.
+- Be registered with the SAS (Outdoor Radios Only).
+- Broadcast at least 1 "heartbeat" per Hour for 12 hours of the 24-hour Reward Period.
+- Meet minimum backhaul Speed Test requirements.
+
+---
+
+## Heartbeats and Reliability of Service
 
 :::note What is a "Heartbeat"?
 
@@ -90,7 +95,83 @@ brief interruptions.
 
 :::
 
----
+To encourage reliable signal availability, 5G Hotspots and connected CBRS Small Cell Radios must
+generate at least one heartbeat per hour in 12 unique hours in the 24-hour Reward Period.
+
+Each 5G Hotspot is awarded 1 point for a successful heartbeat in each hour, with a maximum of 24
+points in the Reward Period. All 5G Hotspots with at least 12 points in the 24-hour Reweard Period
+will be eligible to earn rewards.
+
+### No Missed Heartbeats Example
+
+In this example, the 5G Hotspot generated a heartbeat every hour of every day, earning 24 points.
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Period.
+
+| Hour  | Heartbeat | Points |
+| :---: | :-------: | :----: |
+|  0-1  |    Yes    | **1**  |
+|  1-2  |    Yes    | **1**  |
+|  2-3  |    Yes    | **1**  |
+|  3-4  |    Yes    | **1**  |
+|  4-5  |    Yes    | **1**  |
+|  5-6  |    Yes    | **1**  |
+|  6-7  |    Yes    | **1**  |
+|  7-8  |    Yes    | **1**  |
+|  8-9  |    Yes    | **1**  |
+| 9-10  |    Yes    | **1**  |
+| 10-11 |    Yes    | **1**  |
+| 11-12 |    Yes    | **1**  |
+| 12-13 |    Yes    | **1**  |
+| 13-14 |    Yes    | **1**  |
+| 14-15 |    Yes    | **1**  |
+| 15-16 |    Yes    | **1**  |
+| 16-17 |    Yes    | **1**  |
+| 17-18 |    Yes    | **1**  |
+| 18-19 |    Yes    | **1**  |
+| 19-20 |    Yes    | **1**  |
+| 20-21 |    Yes    | **1**  |
+| 21-22 |    Yes    | **1**  |
+| 23-24 |    Yes    | **1**  |
+| 22-23 |    Yes    | **1**  |
+
+### Half Day Offline Example
+
+In this example, the 5G Hotspot did not generate Heartbeats for 12 hours, earning 12 points.
+
+This 5G Hotspot **will** be eligible for rewards during the Reward Period.
+
+| Hour  | Heartbeat | Points |     | Hour  | Heartbeat | Points |
+| :---: | :-------: | :----: | --- | :---: | :-------: | :----: |
+|  0-1  |    Yes    | **1**  |     | 12-13 |    Yes    | **1**  |
+|  1-2  |    Yes    | **1**  |     | 13-14 |    No     | **0**  |
+|  2-3  |    No     | **0**  |     | 14-15 |    Yes    | **1**  |
+|  3-4  |    Yes    | **1**  |     | 15-16 |    No     | **0**  |
+|  4-5  |    Yes    | **1**  |     | 16-17 |    Yes    | **1**  |
+|  5-6  |    No     | **0**  |     | 17-18 |    No     | **0**  |
+|  6-7  |    No     | **0**  |     | 18-19 |    Yes    | **1**  |
+|  7-8  |    Yes    | **1**  |     | 19-20 |    Yes    | **1**  |
+|  8-9  |    No     | **0**  |     | 20-21 |    No     | **0**  |
+| 9-10  |    No     | **0**  |     | 21-22 |    No     | **0**  |
+| 10-11 |    No     | **0**  |     | 23-24 |    No     | **0**  |
+| 11-12 |    Yes    | **1**  |     | 22-23 |    Yes    | **1**  |
+
+### Mostly Offline Example
+
+In this example, the 5G Hotspot did not generate Heartbeats for 19 hours, earning 5 points.
+
+This 5G Hotspot **will not** be eligible for rewards during the Reward Period.
+
+| Hour | Heartbeat | Points |     | Hour  | Heartbeat | Points |     | Hour  | Heartbeat | Points |
+| :--: | :-------: | :----: | --- | :---: | :-------: | :----: | --- | :---: | :-------: | :----: |
+| 0-1  |    No     | **0**  |     |  8-9  |    No     | **0**  |     | 16-17 |    No     | **0**  |
+| 1-2  |    Yes    | **1**  |     | 9-10  |    No     | **0**  |     | 17-18 |    No     | **0**  |
+| 2-3  |    No     | **0**  |     | 10-11 |    No     | **0**  |     | 18-19 |    Yes    | **1**  |
+| 3-4  |    Yes    | **1**  |     | 11-12 |    No     | **0**  |     | 19-20 |    No     | **0**  |
+| 4-5  |    No     | **0**  |     | 12-13 |    Yes    | **1**  |     | 20-21 |    No     | **0**  |
+| 5-6  |    No     | **0**  |     | 13-14 |    No     | **0**  |     | 21-22 |    No     | **0**  |
+| 6-7  |    No     | **0**  |     | 14-15 |    No     | **0**  |     | 22-23 |    No     | **0**  |
+| 7-8  |    Yes    | **1**  |     | 15-16 |    No     | **0**  |     | 23-24 |    No     | **0**  |
 
 ## Small Cell Radio Reward Scaling
 
@@ -596,14 +677,12 @@ results of Tests 9 and later are the most recent.
 
 ## Future Roadmap
 
-### Heartbeats and Reliability of Service
+:::note Read More
 
-To encourage reliable signal availability, 5G Hotspots and connected CBRS Small Cell Radios must:
+Read more about the Mobile Proof-of-Coverage Roadmap on the
+[Helium Core Dev Blog](https://blog.helium.com/mobile-proof-of-coverage-the-road-ahead-73a25601a13d)
 
-- Be installed appropriately.
-  - Be registered with the SAS (Outdoor Radios Only).
-- **Generate at least 1 "heartbeat" per 1 hour for any 12 hours in the 24-hour Reward Period.**
-- Meet minimum backhaul Speed Test requirements.
+:::
 
 ### MOBILE Mappers
 
