adding mobile poc milestone text and graphic

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -29,6 +29,20 @@ can not "hear" one another directly.
 
 ---
 
+## Proof of Coverage Milestones
+
+Determining useful coverage and the impact on MOBILE PoC rewards will be based on a number of
+factors:
+
+<img className="docsheader" src={useBaseUrl('img/5g-on-helium/mobile-poc-milestones.png')} />
+
+These factors will be rolled out in stages over the course of the next twelve months and explained
+in detail to ensure network builders can take concrete steps to plan or improve their setups. You
+can check out the MOBILE PoC Roadmap
+[here](https://blog.helium.com/mobile-proof-of-coverage-the-road-ahead-73a25601a13d).
+
+---
+
 ## How To Mine MOBILE
 
 Several factors contribute to the amount of MOBILE a 5G Hotspot may earn over a given period. This
