--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -1,6 +1,10 @@
 ---
 id: mobile-poc
+title: MOBILE Proof of Coverage
+pagination_label: MOBILE Proof of Coverage
 sidebar_label: MOBILE Proof of Coverage
+description: MOBILE Proof of Coverage
+# Image:
 slug: /5g-on-helium/mobile-poc
 ---
 
