--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -234,7 +234,7 @@ Choose from the options below to see some speedtest example scenarios and the im
 rewards.
 
 <Tabs block={true}>
-<TabItem value="all_acceptable" label="✅ Example 1: All Acceptable" default>
+<TabItem value="all_acceptable" label="✅ All Acceptable" default>
 
 ```bash
 Download    200 ->  `Acceptable`
@@ -245,7 +245,7 @@ Speed Test Tier ->  `Acceptable`  -> 1.0x Multiplier
 ```
 
 </TabItem>
-<TabItem value="degraded upload" label="❎ Example 2: Degraded Upload" default>
+<TabItem value="degraded upload" label="❎ Degraded Upload" default>
 
 ```bash
 Download    200 ->  `Acceptable`
@@ -256,7 +256,7 @@ Speed Test Tier ->  `Degraded`    -> 0.5x Multiplier
 ```
 
 </TabItem>
-<TabItem value="poor_download_degraded_upload" label="⛔️ Example 3: Poor Download" default>
+<TabItem value="poor_download_degraded_upload" label="⛔️ Poor Download" default>
 
 ```bash
 Download     40 ->  `Poor`
@@ -267,7 +267,7 @@ Speed Test Tier ->  `Poor`        -> 0.25x Multiplier
 ```
 
 </TabItem>
-<TabItem value="failed_latency" label="🚫 Example 4: Failed Latency" default>
+<TabItem value="failed_latency" label="🆘 Failed Latency" default>
 
 ```bash
 Download    200 ->  `Acceptable`
@@ -359,6 +359,14 @@ Rewards calculations.
 
 ---
 
+:::note Helium Explorer Statistics
+
+Choose from the options below to see some example scenarios and the impact on MOBILE rewards.
+
+<Tabs block={true}>
+
+<TabItem value="stats-acceptable-pass" label="✅ Speed Test Passing - Acceptable" default>
+
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
@@ -379,7 +387,9 @@ Rewards calculations.
   </div>
 </div>
 
----
+</TabItem>
+
+<TabItem value="stats-degraded-latency" label="❎ Speed Test Passing - Degraded Latency" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -402,7 +412,9 @@ Rewards calculations.
   </div>
 </div>
 
----
+</TabItem>
+
+<TabItem value="stats-poor-dl" label="❎ Speed Test Passing - Poor Download" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -425,7 +437,11 @@ Rewards calculations.
   </div>
 </div>
 
----
+</TabItem>
+</Tabs>
+
+<Tabs block={true}>
+<TabItem value="stats-fail-dl-ul" label="🆘 Speed Test Fail - Download and Upload" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -449,7 +465,9 @@ Rewards calculations.
   </div>
 </div>
 
----
+</TabItem>
+
+<TabItem value="stats-not-measured" label="⏺️ Speed Test Not Measured" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -472,7 +490,9 @@ Rewards calculations.
   </div>
 </div>
 
----
+</TabItem>
+
+<TabItem value="stats-no-recent" label="⏺️ No Recent Speed Test Data" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -496,7 +516,9 @@ Rewards calculations.
   </div>
 </div>
 
----
+</TabItem>
+
+<TabItem value="stats-not-enough" label="⏺️ Not Enough Data" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -523,6 +545,12 @@ Rewards calculations.
     </div>
   </div>
 </div>
+
+</TabItem>
+
+</Tabs>
+
+:::
 
 ---
 
