explorer stats into tabs

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -351,13 +351,11 @@ High-Power Outdoor Poor       => 100,000,000 * 0.001 /   10 = 14,285.71 MOBILE p
             Indoor Poor       => 100,000,000 * 0.024 /  660 =  3,571.43 MOBILE per day
 ```
 
-### Statistics on Helium Explorer
+## Statistics on Helium Explorer
 
 Speed Test metrics are viewable on the 5G Hotspot's page on Explorer under the `5G Statistics` tab.
 Here are examples of each status and a brief description of each metric and the resulting impact on
 Rewards calculations.
-
----
 
 :::note Helium Explorer Statistics
 
@@ -365,7 +363,7 @@ Choose from the options below to see some example scenarios and the impact on MO
 
 <Tabs block={true}>
 
-<TabItem value="stats-acceptable-pass" label="✅ Speed Test Passing - Acceptable" default>
+<TabItem value="stats-acceptable-pass" label="✅ Speed Test Passing" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -389,7 +387,7 @@ Choose from the options below to see some example scenarios and the impact on MO
 
 </TabItem>
 
-<TabItem value="stats-degraded-latency" label="❎ Speed Test Passing - Degraded Latency" default>
+<TabItem value="stats-degraded-latency" label="❎ Degraded Latency" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -414,7 +412,7 @@ Choose from the options below to see some example scenarios and the impact on MO
 
 </TabItem>
 
-<TabItem value="stats-poor-dl" label="❎ Speed Test Passing - Poor Download" default>
+<TabItem value="stats-poor-dl" label="❎ Poor Download" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -441,7 +439,7 @@ Choose from the options below to see some example scenarios and the impact on MO
 </Tabs>
 
 <Tabs block={true}>
-<TabItem value="stats-fail-dl-ul" label="🆘 Speed Test Fail - Download and Upload" default>
+<TabItem value="stats-fail-dl-ul" label="🆘 Speed Test Fail" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -467,7 +465,7 @@ Choose from the options below to see some example scenarios and the impact on MO
 
 </TabItem>
 
-<TabItem value="stats-not-measured" label="⏺️ Speed Test Not Measured" default>
+<TabItem value="stats-not-measured" label="⏺️ Not Measured" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
@@ -492,7 +490,7 @@ Choose from the options below to see some example scenarios and the impact on MO
 
 </TabItem>
 
-<TabItem value="stats-no-recent" label="⏺️ No Recent Speed Test Data" default>
+<TabItem value="stats-no-recent" label="⏺️ No Recent Data" default>
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
