move rewards calculation section

--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -289,68 +289,6 @@ the Network and its users.
 
 ---
 
-## Radio Earnings Calculation
-
-Earnings are calculated in 3 steps.
-
-1. Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Radio Type
-2. Each Small Cell Radio Type is allocated its ratio of the total rewards in the given epoch
-3. Each 5G Hotspot is proportionally rewarded from its respective rewards pool by Small Cell Radio
-   Type
-
-:::caution
-
-As an example, we can calculate the rewards for a 5G Hotspot in a single epoch assuming the
-following (the below numbers are examples and may not reflect actual deployed 5G Hotspots today):
-
-- 100,000,000 MOBILE Rewarded per day
-- 310 High-Power Outdoor 5G Hotspots earn rewards
-- 2,000 Outdoor 5G Hotspots earn rewards
-- 3,360 Indoor 5G Hotspots earn rewards
-- 1 Small Cell Radio per 5G Hotspot (in real-world usage, multiple Small Cell Radios can be
-  connected to a 5G Hotspot)
-
-:::
-
-## Total Rewards Units for Epoch
-
-Calculate the Total Reward Points for a given epoch using the Reward Weight for each Small Cell
-Radio type.
-
-In this example, the total rewards Points per epoch is 7,000, and the ratios are as follows:
-
-```bash
-  High-Power Outdoor Count Acceptable ( 250) * 4.0 * 1.00   =>     1000   =>  0.143
-+ High-Power Outdoor Count Degraded   (  50) * 4.0 * 0.50   =>  +   100   =>  0.014
-+ High-Power Outdoor Count Poor       (  10) * 4.0 * 0.25   =>  +    10   =>  0.001
-+            Outdoor Count Acceptable (1100) * 2.5 * 1.00   =>  +  2750   =>  0.393
-+            Outdoor Count Degraded   ( 500) * 2.5 * 0.50   =>  +   625   =>  0.089
-+            Outdoor Count Poor       ( 400) * 2.5 * 0.25   =>  +   250   =>  0.036
-+             Indoor Count Acceptable (1500) * 1.0 * 1.00   =>  +  1500   =>  0.214
-+             Indoor Count Degraded   (1200) * 1.0 * 0.50   =>  +   600   =>  0.086
-+             Indoor Count Poor       ( 660) * 1.0 * 0.25   =>  +   165   =>  0.024
----------------------------------------------------------       --------
-                                                                  7,000
-```
-
-### Earnings per Small Cell Radio
-
-Each Small Cell Radio is allocated its rewards based on the reward weight of the model.
-
-> Small Cell Reward = Daily Rewards \* Reward Weight / Count of Small Cell Type
-
-```bash
-High-Power Outdoor Acceptable => 100,000,000 * 0.143 /  250 = 57,142.86 MOBILE per day
-High-Power Outdoor Degraded   => 100,000,000 * 0.014 /   50 = 28,571.43 MOBILE per day
-High-Power Outdoor Poor       => 100,000,000 * 0.001 /   10 = 14,285.71 MOBILE per day
-           Outdoor Acceptable => 100,000,000 * 0.393 / 1100 = 35,714.29 MOBILE per day
-           Outdoor Degraded   => 100,000,000 * 0.089 /  500 = 17,857.14 MOBILE per day
-           Outdoor Poor       => 100,000,000 * 0.036 /  400 =  8,928.57 MOBILE per day
-            Indoor Acceptable => 100,000,000 * 0.214 / 1500 = 14,285.71 MOBILE per day
-            Indoor Degraded   => 100,000,000 * 0.086 / 1200 =  7,142.86 MOBILE per day
-            Indoor Poor       => 100,000,000 * 0.024 /  660 =  3,571.43 MOBILE per day
-```
-
 ## Statistics on Helium Explorer
 
 Speed Test metrics are viewable on the 5G Hotspot's page on Explorer under the `5G Statistics` tab.
@@ -549,6 +487,70 @@ Choose from the options below to see some example scenarios and the impact on MO
 </Tabs>
 
 :::
+
+---
+
+## Radio Earnings Calculation
+
+Earnings are calculated in 3 steps.
+
+1. Calculate the Total Emissions Weight and Emissions Weight Ratio for each Small Cell Radio Type
+2. Each Small Cell Radio Type is allocated its ratio of the total rewards in the given epoch
+3. Each 5G Hotspot is proportionally rewarded from its respective rewards pool by Small Cell Radio
+   Type
+
+:::caution
+
+As an example, we can calculate the rewards for a 5G Hotspot in a single epoch assuming the
+following (the below numbers are examples and may not reflect actual deployed 5G Hotspots today):
+
+- 100,000,000 MOBILE Rewarded per day
+- 310 High-Power Outdoor 5G Hotspots earn rewards
+- 2,000 Outdoor 5G Hotspots earn rewards
+- 3,360 Indoor 5G Hotspots earn rewards
+- 1 Small Cell Radio per 5G Hotspot (in real-world usage, multiple Small Cell Radios can be
+  connected to a 5G Hotspot)
+
+:::
+
+### Total Rewards Units for Epoch
+
+Calculate the Total Reward Points for a given epoch using the Reward Weight for each Small Cell
+Radio type.
+
+In this example, the total rewards Points per epoch is 7,000, and the ratios are as follows:
+
+```bash
+  High-Power Outdoor Count Acceptable ( 250) * 4.0 * 1.00   =>     1000   =>  0.143
++ High-Power Outdoor Count Degraded   (  50) * 4.0 * 0.50   =>  +   100   =>  0.014
++ High-Power Outdoor Count Poor       (  10) * 4.0 * 0.25   =>  +    10   =>  0.001
++            Outdoor Count Acceptable (1100) * 2.5 * 1.00   =>  +  2750   =>  0.393
++            Outdoor Count Degraded   ( 500) * 2.5 * 0.50   =>  +   625   =>  0.089
++            Outdoor Count Poor       ( 400) * 2.5 * 0.25   =>  +   250   =>  0.036
++             Indoor Count Acceptable (1500) * 1.0 * 1.00   =>  +  1500   =>  0.214
++             Indoor Count Degraded   (1200) * 1.0 * 0.50   =>  +   600   =>  0.086
++             Indoor Count Poor       ( 660) * 1.0 * 0.25   =>  +   165   =>  0.024
+---------------------------------------------------------       --------
+                                                                  7,000
+```
+
+### Earnings per Small Cell Radio
+
+Each Small Cell Radio is allocated its rewards based on the reward weight of the model.
+
+> Small Cell Reward = Daily Rewards \* Reward Weight / Count of Small Cell Type
+
+```bash
+High-Power Outdoor Acceptable => 100,000,000 * 0.143 /  250 = 57,142.86 MOBILE per day
+High-Power Outdoor Degraded   => 100,000,000 * 0.014 /   50 = 28,571.43 MOBILE per day
+High-Power Outdoor Poor       => 100,000,000 * 0.001 /   10 = 14,285.71 MOBILE per day
+           Outdoor Acceptable => 100,000,000 * 0.393 / 1100 = 35,714.29 MOBILE per day
+           Outdoor Degraded   => 100,000,000 * 0.089 /  500 = 17,857.14 MOBILE per day
+           Outdoor Poor       => 100,000,000 * 0.036 /  400 =  8,928.57 MOBILE per day
+            Indoor Acceptable => 100,000,000 * 0.214 / 1500 = 14,285.71 MOBILE per day
+            Indoor Degraded   => 100,000,000 * 0.086 / 1200 =  7,142.86 MOBILE per day
+            Indoor Poor       => 100,000,000 * 0.024 /  660 =  3,571.43 MOBILE per day
+```
 
 ---
 
