--- a/docs/5g-on-helium/mobile-poc.mdx
+++ b/docs/5g-on-helium/mobile-poc.mdx
@@ -106,20 +106,10 @@ The Radio generated a heartbeat every hour of the day, earning 24 points.
 
 This Radio **will** be eligible for rewards during the Reward Period.
 
-| Hour  | Heartbeat | Points |     | Hour  | Heartbeat | Points |
-| :---: | :-------: | :----: | --- | :---: | :-------: | :----: |
-|  0-1  |    Yes    | **1**  |     | 12-13 |    Yes    | **1**  |
-|  1-2  |    Yes    | **1**  |     | 13-14 |    Yes    | **1**  |
-|  2-3  |    Yes    | **1**  |     | 14-15 |    Yes    | **1**  |
-|  3-4  |    Yes    | **1**  |     | 15-16 |    Yes    | **1**  |
-|  4-5  |    Yes    | **1**  |     | 16-17 |    Yes    | **1**  |
-|  5-6  |    Yes    | **1**  |     | 17-18 |    Yes    | **1**  |
-|  6-7  |    Yes    | **1**  |     | 18-19 |    Yes    | **1**  |
-|  7-8  |    Yes    | **1**  |     | 19-20 |    Yes    | **1**  |
-|  8-9  |    Yes    | **1**  |     | 20-21 |    Yes    | **1**  |
-| 9-10  |    Yes    | **1**  |     | 21-22 |    Yes    | **1**  |
-| 10-11 |    Yes    | **1**  |     | 23-24 |    Yes    | **1**  |
-| 11-12 |    Yes    | **1**  |     | 22-23 |    Yes    | **1**  |
+<img
+  className="explorerSidebar"
+  src={useBaseUrl('img/5g-on-helium/heartbeat-clock-no-missed-heartbeats.png')}
+/>
 
 </TabItem>
 
@@ -129,20 +119,10 @@ The Radio did not generate Heartbeats for 12 hours, earning 12 points.
 
 This Radio **will** be eligible for rewards during the Reward Period.
 
-| Hour  | Heartbeat | Points |     | Hour  | Heartbeat | Points |
-| :---: | :-------: | :----: | --- | :---: | :-------: | :----: |
-|  0-1  |    Yes    | **1**  |     | 12-13 |    Yes    | **1**  |
-|  1-2  |    Yes    | **1**  |     | 13-14 |    No     | **0**  |
-|  2-3  |    No     | **0**  |     | 14-15 |    Yes    | **1**  |
-|  3-4  |    Yes    | **1**  |     | 15-16 |    No     | **0**  |
-|  4-5  |    Yes    | **1**  |     | 16-17 |    Yes    | **1**  |
-|  5-6  |    No     | **0**  |     | 17-18 |    No     | **0**  |
-|  6-7  |    No     | **0**  |     | 18-19 |    Yes    | **1**  |
-|  7-8  |    Yes    | **1**  |     | 19-20 |    Yes    | **1**  |
-|  8-9  |    No     | **0**  |     | 20-21 |    No     | **0**  |
-| 9-10  |    No     | **0**  |     | 21-22 |    No     | **0**  |
-| 10-11 |    No     | **0**  |     | 23-24 |    No     | **0**  |
-| 11-12 |    Yes    | **1**  |     | 22-23 |    Yes    | **1**  |
+<img
+  className="explorerSidebar"
+  src={useBaseUrl('img/5g-on-helium/heartbeat-clock-half-day-offline.png')}
+/>
 
 </TabItem>
 
@@ -152,20 +132,10 @@ The Radio did not generate Heartbeats for 19 hours, earning 5 points.
 
 This Radio **will not** be eligible for rewards during the Reward Period.
 
-| Hour  | Heartbeat | Points |     | Hour  | Heartbeat | Points |
-| :---: | :-------: | :----: | --- | :---: | :-------: | :----: |
-|  0-1  |    No     | **0**  |     | 16-17 |    No     | **0**  |
-|  1-2  |    Yes    | **1**  |     | 17-18 |    No     | **0**  |
-|  2-3  |    No     | **0**  |     | 18-19 |    Yes    | **1**  |
-|  3-4  |    Yes    | **1**  |     | 19-20 |    No     | **0**  |
-|  4-5  |    No     | **0**  |     | 12-13 |    Yes    | **1**  |
-|  5-6  |    No     | **0**  |     | 13-14 |    No     | **0**  |
-|  6-7  |    No     | **0**  |     | 14-15 |    No     | **0**  |
-|  7-8  |    Yes    | **1**  |     | 15-16 |    No     | **0**  |
-|  8-9  |    No     | **0**  |     | 20-21 |    No     | **0**  |
-| 9-10  |    No     | **0**  |     | 21-22 |    No     | **0**  |
-| 10-11 |    No     | **0**  |     | 22-23 |    No     | **0**  |
-| 11-12 |    No     | **0**  |     | 23-24 |    No     | **0**  |
+<img
+  className="explorerSidebar"
+  src={useBaseUrl('img/5g-on-helium/heartbeat-clock-mostly-offline.png')}
+/>
 
 </TabItem>
 
